--- a/css/draggy.css
+++ b/css/draggy.css
@@ -9,14 +9,15 @@
 
 #inner {
     border: 5px solid #aaa;
-    cursor: pointer;
-    height: 100px;
-    width: 200px;
-    line-height: 95px;
-    text-align: center;
     color: #aaa;
+    cursor: pointer;
     font-size: 25px;
     font-family: sans-serif;
+    height: 100px;
+    line-height: 95px;
+    position: absolute;
+    text-align: center;
+    width: 200px;
 }
 
 .no-select {
