--- a/css/jess.css
+++ b/css/jess.css
@@ -1,9 +1,21 @@
 a {
     color: #aaa;
+    text-decoration: none;
 }
 
 a:hover,
 a:focus {
     color: #000;
-    text-decoration: none;
+}
+
+.container {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 95%;
+}
+
+h3 {
+    font-size: 24px;
 }
